2003-10-30  Emmanuel Beffara  <manu@beffara.org>

	* src/beamer.py, man/...: Added a module for package 'beamer'.

	* src/__init__.py: Modified the heuristics for pdfTeX's fake errors.

2003-10-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/util.py: Added support for multi-line macro
	arguments.

	* src/modules/graphics.py: Added a hook for \DeclareGraphicsExtension
	and preliminary support for \DeclareGraphicsRule.

	* src/graphics/mpost.py: Fixed the regular expression for dependency
	analysis in MetaPost sources.

2003-10-27  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/{verbatim|moreverb}.py, man/...: Added modules for
	packages 'verbatim' and 'moreverb' (providing dependency analysis).

2003-10-20  Emmanuel Beffara  <manu@beffara.org>

	* src/...: Added a reference to the message writer in dependency
	nodes. Used it to make cleaning more verbose.

	* src/__init__.py (Environment): Added method "prog_available" to
	check for external programs.

	* src/graphics/__init__.py, src/graphics/convert.py: Added graphics
	module 'convert' for ImageMagick conversion.

	* src/util.py, src/graphics/__init__.py: Changed the Converter class
	to allow several modules for a given rewriting rule.

2003-10-07  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the modification about error-like warnings.

2003-09-29  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, man/...: Added directive 'clean'.

	* src/__init__.py: Fixed the calls to 'watch_file'.

	* src/__init__.py: Handling of pdfTeX's error-like warning messages.

2003-09-26  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, man/...: Changed the semantics of watched_files a
	bit, added directive 'watch'.

	* src/__init__.py, src/modules/lhs2TeX.py: Added module 'lhs2TeX' for
	Literate Haskell support.

2003-07-31  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Fixed the reinitialization process.

2003-06-25  Emmanuel Beffara  <manu@beffara.org>
